Add hardware keyboard mode
